# bjtt

./: .flake8  .mypy.ini  Makefile  README.md  pyproject.toml
bjtt/: game.py  strategy.py  test_strategy.py
bjtt/data/: card.py  counter.py  hand.py  test_card.py  test_counter.py  test_hand.py
